Reintento image pizzaPortada

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ main {
 }
 
 main .imagen-pizzaportada{
-    width: 200vw;
+    width: 100vw;
 }
 
 main p{
@@ -35,11 +35,13 @@ body{
     border: 2px solid white;
 
   /*  <img src="/assets/images/pizzaPortada.jpg" alt="">
-    background-image: url('/assets/images/pizzaPortada.jpg');*/
+    background-image: url('/assets/images/pizzaPortada.jpg');
     background-size: cover; /* Ajusta la imagen para cubrir todo el fondo */
     background-repeat: no-repeat; /* Evita que la imagen se repita */
     background-position: center; /* Centra la imagen en el fondo */
+    
 }
+
 
 /*dentro del body, un conjunto de elementos div
 que comparten (x el simbolo >) un estilo particular 
