--- a/assets/css/stylePromociones.css
+++ b/assets/css/stylePromociones.css
@@ -135,6 +135,18 @@ body{
         font-size: 2em;
         background-color: rgb(241, 212, 65) }
 }
+.grid-item10 {
+    
+    padding: 20px;
+    text-align: center;
+    color: transparent;
+    border: 2px solid white;
+    &:hover{
+        color: black;
+        font-weight: bold;
+        font-size: 2em;
+        background-color: rgb(241, 212, 65) }
+}
 main {
     padding: 1rem;
     display: grid;
