--- a/assets/css/stylePromociones.css
+++ b/assets/css/stylePromociones.css
@@ -1,26 +1,31 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Poller+One&display=swap');
 .navbar ul{
     list-style-type: none;
     background-color: #ff3300;
     padding: 0px;
     margin: 0px;
     overflow: hidden;
+    text-align: center;
 
 }
 .navbar a {
     color: black;
     text-decoration: solid;
     font-weight: bolder;
-    padding: 15px;
+    padding: 40px 40px ;
     display: block;
     text-align: center;
     overflow: hidden;
+    font-family: "Poller One";
+    font-size: 18px;
+    text-align: center;
 }
 .navbar a:hover{
     background-color: #eb860b;
 }
 .navbar li{
-    float: left;
+    display: inline-block;
+    
 }
 
 body{
@@ -53,10 +58,11 @@ body{
     border: 2px solid white;
       
         &:hover{
-        color: black;
+        color: rgb(248, 246, 246);
         font-weight: bold;
         font-size: 2em;
         background-color: rgb(241, 212, 65);
+        filter: brightness(50%);
         }
         
 }
