--- a/assets/css/stylePromociones.css
+++ b/assets/css/stylePromociones.css
@@ -33,7 +33,7 @@ body{
     margin: 0;
     background-color: #ffae00;
     border: 2px solid white;
-    height: 250svh;
+    height: 100vw;
 
 }
 .container {
