--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,24 +97,42 @@ body > div {
 }
 
 .container {
-    background-color: blue;
-    display: flex;
-    width: 500px;
-    height: 100px;
-    justify-content: space-between;
+    background-color: transparent;
+    display: inline-flex;
+    box-sizing: border-box;
+    flex-wrap: nowrap;
+    align-content: end;
+    height: 40vw;
+    width: 100vw;
+    justify-content: space-around;
+    column-gap: 20px;
     
 }
 .item1 {
-    background-color: azure;
-}
-.item2 p{
-    align-items: flex-start;
-    font-size: 16px;
-    
+    align-items: center;
+    background-color: transparent;
+    display: flex;
+    flex: 3;
+    padding: 100px;
 }
 
 .item2 {
     position: relative;
-    left: 50px;
+    flex: 3;
+    align-items: center;
+    display: flex;
+    background-color: #ffae00;
 }
 
+.item1 p {
+    color: rgb(249, 248, 245);
+    font-size: 4em;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.item2{
+    color: black;
+    font-size: 2em;
+    font-family: Arial, Helvetica, sans-serif;
+    text-wrap: wrap;
+}
