--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,6 +63,7 @@ body{
     background-color: #666;
     height: 100svh;
     border: 2px solid white;
+    width: 100vw;
 
   /*  <img src="/assets/images/pizzaPortada.jpg" alt="">*/
     background-image: url('/assets/images/pizzaPortada.jpg') !important;
@@ -111,9 +112,11 @@ body > div {
 .item1 {
     align-items: center;
     background-color: transparent;
+    
     display: flex;
     flex: 3;
     padding: 100px;
+    
 }
 
 .item2 {
@@ -121,7 +124,9 @@ body > div {
     flex: 3;
     align-items: center;
     display: flex;
-    background-color: #ffae00;
+    background-color:  rgb(236, 201, 159, 0.5);
+    border-radius: 40px;
+    
 }
 
 .item1 p {
@@ -130,9 +135,10 @@ body > div {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.item2{
+.item2 p{
     color: black;
-    font-size: 2em;
+    font-size: 40px;
     font-family: Arial, Helvetica, sans-serif;
     text-wrap: wrap;
+    text-align: center;
 }
