--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,12 +121,11 @@ body > div {
 
 .item2 {
     position: relative;
-    flex: 3;
+    flex: 4;
     align-items: center;
-    display: flex;
+    display: -ms-inline-flexbox;
     background-color:  rgb(236, 201, 159, 0.5);
-    border-radius: 40px;
-    
+    border-radius: 40px;  
 }
 
 .item1 p {
@@ -137,7 +136,7 @@ body > div {
 
 .item2 p{
     color: black;
-    font-size: 40px;
+    font-size: 30px;
     font-family: Arial, Helvetica, sans-serif;
     text-wrap: wrap;
     text-align: center;
