--- a/assets/css/styleContacto.css
+++ b/assets/css/styleContacto.css
@@ -6,6 +6,34 @@
     --bg-div-color-ch: #ff3300;
 }
 
+.navbar ul{
+    list-style-type: none;
+    background-color: #ff3300;
+    padding: 0px;
+    margin: 0px;
+    overflow: hidden;
+    text-align: center;
+
+}
+.navbar a {
+    color: black;
+    text-decoration: solid;
+    font-weight: bolder;
+    padding: 40px 40px ;
+    display: block;
+    text-align: center;
+    overflow: hidden;
+    font-family: "Poller One";
+    font-size: 18px;
+    text-align: center;
+}
+.navbar a:hover{
+    background-color: #eb860b;
+}
+.navbar li{
+    display: inline-block;
+    
+
 body {
     background-color: #ffae00;
     font-family: "Poppins", sans-serif;
