--- a/assets/css/styleSucursales.css
+++ b/assets/css/styleSucursales.css
@@ -1,143 +1,103 @@
 @import url('https://fonts.googleapis.com/css2?family=Poller+One&display=swap');
 
-:root{
-    /*PALETA DE COLORES */
-    --bg-div-color:#700b97;
-    --bg-div-color-sec:#8e05c2;
+:root {
+    /* PALETA DE COLORES */
+    --bg-div-color: #700b97;
+    --bg-div-color-sec: #8e05c2;
     --bg-div-color-op: #ffae00;
     --bg-div-color-ch: #ff3300;
     --bg-navbar-color-hover: #eb860b;
     --bg-div-color-suc: #F5DEB3;
 }
 
-
-/*etiqueta main como excepcion*/
-body{
+body {
     margin: 0;
     background-color: var(--bg-div-color-op);
-    height: 250svh;
+    height: 250svh; 
     border: 2px solid white;
-
 }
 
-header{
+header {
     box-sizing: 50%;
 }
 
-.navbar ul{
+.navbar ul {
     list-style-type: none;
     background-color: var(--bg-div-color-ch);
-    padding: 0px;
-    margin: 0px;
+    padding: 0;
+    margin: 0;
     overflow: hidden;
     text-align: center;
-
 }
+
 .navbar a {
     color: black;
-    text-decoration: solid;
+    text-decoration: none;
     font-weight: bolder;
-    padding: 40px 40px ;
+    padding: 40px;
     display: block;
     text-align: center;
-    overflow: hidden;
     font-family: "Poller One";
     font-size: 18px;
-    text-align: center;
-    &:hover{
-        background-color: var(--bg-navbar-color-hover);
-    }
+    transition: background-color 0.3s;
 }
-/* .navbar a:hover{
+
+.navbar a:hover {
     background-color: var(--bg-navbar-color-hover);
-} */
-.navbar li{
-    display: inline-block;
-
 }
 
-.container{
+.navbar li {
+    display: inline-block;
+}
+
+.container {
     display: grid;
-    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     gap: 1rem;
-
     grid-template-areas:
-    "uno dos"
-    "tres cuatro"
+        "uno dos"
+        "tres cuatro";
 }
 
 main > div {
     height: 300px;
     width: 600px;
-    /* aspect-ratio: 1/0.5; */
-    border-radius: 30px ;
-
+    border-radius: 30px;
     margin: 6rem 2rem;
     flex-grow: 2;
-    
-    }
+}
 
-.imagen{
+.imagen {
     width: 200px;
     height: 200px;
-    
-    
     position: relative;
     left: 10px;
     top: -20px;
 }
 
-h2{
+.mapa {
+    width: 200px;
+    height: 150px;
+    position: relative;
+    left: 10rem;
+    bottom: 2rem;
+}
+
+h2 {
     text-align: center;
     font-family: "Poppins", sans-serif;
     font-weight: 600;
-
 }
 
-
-p{
+p {
     text-align: right;
     font-family: "Poppins", sans-serif;
     font-weight: 500;
 }
 
-
-.grid-div{
+.grid-div {
     padding: 20px;
-    
-    
     border: 2px solid black;
     background-color: var(--bg-div-color-suc);
-    
 }
-
-/* .grid-uno{
-    padding: 20px;
-    /* text-align: right; */
-
-    /* border: 2px solid black; */
-    /* background-image: url("../images/mapa.png");
-    background-position: left;
-    background-size: contain;
-    background-repeat: no-repeat; */
-/* } */
-/* .grid-tres{
-    padding: 20px;
-    text-align: center;
-
-    border: 2px solid black;
-    background-image: url("../images/tienda.png");
-    background-position: left;
-    background-size: contain;
-    background-repeat: no-repeat;
-}
-
-
-.grid-cuatro{
-    padding: 20px;
-    text-align: center;
-
-    border: 2px solid black;
-} */
