--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,8 +65,11 @@ body{
     border: 2px solid white;
     width: 100vw;
 
-  /*  <img src="/assets/images/pizzaPortada.jpg" alt="">*/
-    background-image: url('/assets/images/pizzaPortada.jpg') !important;
+  /*  <img src="/assets/images/pizzaPortada.jpg" alt="">
+  ./assets/css/style.css
+      background-image: url('/codo1C2024FS/assets/images/pizzaPortada.jpg') !important;
+  */
+    background-image: url('../images/pizzaPortada.jpg') !important;
     background-size: cover; /* Ajusta la imagen para cubrir todo el fondo */
     background-repeat: no-repeat; /* Evita que la imagen se repita */
     background-position: center; /* Centra la imagen en el fondo */
